# sdltest

./: CMakeLists.txt  README.md
src/: application.cpp  application.h  main.cpp
